<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstOperand"
        android:layout_width="415dp"
        android:layout_height="108dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/secondOperand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/secondOperand"
        android:layout_width="410dp"
        android:layout_height="108dp"
        android:layout_marginEnd="1dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btnLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstOperand" />

    <GridLayout
        android:id="@+id/btnLayout"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondOperand">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="103dp"
            android:layout_height="105dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="0dp"
            android:text="@string/addition"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtractBtn"
            android:layout_width="103dp"
            android:layout_height="105dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/subtraction"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/multBtn"
            android:layout_width="103dp"
            android:layout_height="105dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/multiply"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divideBtn"
            android:layout_width="103dp"
            android:layout_height="105dp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/divide"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn7"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn7"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn8"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="0dp"
            android:text="@string/btn8"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn9"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn9"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn6"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn6"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn5"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn5"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn4"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn4"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn3"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn3"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn2"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn1"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numBtn0"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/btn0"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/periodBtn"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/period"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearBtn"
            android:layout_width="103dp"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_margin="0dp"
            android:paddingTop="20dp"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/lightGrey"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equalsBtn"
            android:layout_width="105dp"
            android:layout_height="107dp"
            android:layout_row="1"
            android:layout_rowSpan="4"
            android:layout_rowWeight="3"
            android:layout_column="3"
            android:layout_columnSpan="0"
            android:text="@string/equals"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="#fe6f76"
            app:cornerRadius="0dp"
            app:strokeColor="#6A6A6A"
            app:strokeWidth="1dp" />


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>